# tuningplayground

./: .gitignore  Cargo.toml  README.md  automation.py  build.sh  build_dev.sh  build_release.sh  check.sh  lint.sh  playground.ts  rustcheck.sh  todo
.github/: dependabot.yaml
.github/workflows/: CI.yaml  build.yaml  build.yml  check.yaml  workflows.yaml
chord21-rs/: Cargo.toml
keymapping/: Cargo.toml
keymapping/src/: lib.rs
music21-rs/: Cargo.toml  generate_chords.py  python_test.sh  test.py
music21-rs/src/: interval.rs  lib.rs  note.rs  pitch.rs  tests.rs
music21-rs/src/chord/: chord.rs  mod.rs
playground/: .gitignore  Cargo.toml  check.sh
playground/src/: lib.rs
src/: lib.rs  luts.rs  math_helpers.rs  tables.rs  tuning_systems.rs
src/tuning_systems/: algorithms.rs  config.rs  fraction.rs  luts.rs  mod.rs  state.rs  tone.rs  tunings.rs
tests/: tests.rs
ts/: .eslintrc.json  .gitignore  eslint.config.mjs  package-lock.json  package.json  tscheck.sh  tsconfig.json  webpack.config.js  webpack.config.ts
ts/src/: MIDI.ts  Tone.ts  UI.ts  bootstrap.ts  chords.json  chords.txt  config.ts  events.ts  index.html  index.ts  webpack.config.ts
tuning_systems/: Cargo.toml
tuning_systems-wasm/: .gitignore  Cargo.toml
tuning_systems-wasm/src/: lib.rs
tuning_systems-wasm/www/: .gitignore  package.json  tsconfig.json
tuning_systems-wasm/www/ts/: index.ts  webpack.config.ts
tuning_systems/src/: lib.rs
tuning_systems/src/tuning_systems/: algorithms.rs  config.rs  fraction.rs  helpers.rs  luts.rs  mod.rs  tone.rs  tunings.rs
tuning_systems/tests/: tests.rs
tuningplayground/: Cargo.toml  chords.json
tuningplayground/src/: lib.rs
www/: .gitignore  index.html  package.json  tsconfig.json
