[package]
authors = ["hill <hill@hilll.dev>"]
description = "a crate that provides ratios for different musical tuning systems"
edition = "2021"
keywords = ["music", "tuning"]
license = "AGPL-3.0"
name = "tuning_systems"
repository = "https://github.com/float3/tuning_systems"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
#opt-level = "s"

[workspace]
members = ["tuning_systems-wasm"]
