[package]
authors = ["hill <hill@hilll.dev>"]
description = "a crate that provides ratios for different musical tuning systems"
edition = "2021"
keywords = ["music", "tuning"]
license = "AGPL-3.0"
name = "tuning_systems"
repository = "https://github.com/float3/tuning_systems"
version = "0.2.0"

[workspace]
members = ["tuning_systems-wasm"]

[profile.release]
opt-level = "z"

[features]
default = []
#wasm-bindgen = ["dep:wasm-bindgen"]

#[dependencies]
#wasm-bindgen = { version = "0.2.91", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.41"
