[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = ["tuning_systems", "tuningplayground", "music21-rs", "keymapping"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = "z"
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
