[package]
authors = ["hill <hill@hilll.dev>"]
description = "a rust port of the music21 chord naming algorithm"
edition = "2021"
keywords = ["music", "chords"]
license = "AGPL-3.0"
name = "chord21-rs"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[features]
default = []
#wasm-bindgen = ["dep:wasm-bindgen"]

#[dependencies]
#wasm-bindgen = { version = "0.2.91", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.41"
