[package]
authors = ["hill <hill@hilll.dev>"]
description = "a crate that provides DAW like keyboard maps for different keybaords"
edition = "2021"
keywords = ["VMPK", "keyboard"]
license = "AGPL-3.0"
name = "keymapping"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[features]
default = []
#wasm-bindgen = ["dep:wasm-bindgen"]

#[dependencies]
#wasm-bindgen = { version = "0.2.91", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.41"
