[package]
authors = ["hill <hill@hilll.dev>"]
description = "a rust port of music21 (for now just the chord naming algorithm)"
edition = "2021"
keywords = ["music", "chords", "music21"]
license = "LICENSE"
name = "music21-rs"
repository = "https://github.com/float3/tuningplayground"
version = "0.0.1"

[features]
default = []
#wasm-bindgen = ["dep:wasm-bindgen"]

[dependencies]
lazy_static = "1.4.0"
tuning_systems = { path = "../tuning_systems" }
#wasm-bindgen = { version = "0.2.91", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.41"
