[package]
authors = ["hill <hill@hilll.dev>"]
description = "expose my rust libraries to wasm"
edition = "2021"
license = "AGPL-3.0"
name = "playground"
repository = "https://github.com/float3/tuning_systems"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mini-alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
mini-alloc = ["dep:mini-alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true } # greater code size but forward panics to console
mini-alloc = { version = "0.4.2", optional = true }
tuning_systems = { path = "../tuning_systems" }
wasm-bindgen = "0.2.91"
#wee_alloc = { version = "0.4.5", optional = true, features = ["nightly",] } # smaller code size but slower

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = "z"
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
