[package]
authors = ["hill <hill@hilll.dev>"]
description = "expose tuning_systems to wasm"
edition = "2021"
license = "AGPL-3.0"
name = "tuning_systems-wasm"
repository = "https://github.com/float3/tuning_systems"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
tuning_systems = { path = "../tuning_systems" }
wasm-bindgen = "0.2.91"
console_error_panic_hook = { version = "0.1.6", optional = true } # greater code size but forward panics to console
# wee_alloc = { version = "0.4.5", optional = true } # smaller code size but smaller 

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
